--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
-flask
-requests
+anyio==3.6.2
+beautifulsoup4==4.12.2
+blinker==1.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+fastapi==0.95.1
+Flask==2.3.2
+Flask-Cors==3.0.10
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+pydantic==1.10.7
+requests==2.30.0
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+starlette==0.26.1
+typing_extensions==4.5.0
+urllib3==2.0.2
+Werkzeug==2.3.4
